--- a/v1/views/campgrounds.ejs
+++ b/v1/views/campgrounds.ejs
@@ -2,6 +2,8 @@
 
 <h1>This is the campgrounds page</h1>
 
+<a href="/campgrounds/new">Add New Campground</a>
+
 <% for(var i = 0; i < campgrounds.length; i++){ %>
     <div>
         <h4><%= campgrounds[i].name %></h4>
