--- a/v1/views/partials/footer.ejs
+++ b/v1/views/partials/footer.ejs
@@ -1,3 +1,11 @@
-        <p>Made with ❤ by Bhanuj</p>
     </body>
+    <footer class="page-footer font-small blue">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+          <h5>Made with ❤ by Bhanuj</h5>
+        </div>
+        <!-- Copyright -->
+      
+      </footer>
 </html>
