--- a/v1/views/campgrounds.ejs
+++ b/v1/views/campgrounds.ejs
@@ -1,14 +1,29 @@
 <%- include("partials/header") %> 
 
-<h1>This is the campgrounds page</h1>
+<div class="container">
 
-<a href="/campgrounds/new">Add New Campground</a>
+    <header class="jumbotron">
+        <div class="jumbotron">
+            <h1>Welcome To YelpCamp!</h1>
+            <p>View our hand-picked campgrounds from all over the world</p>
+            <p>
+                <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
+            </p>
+        </div>
+    </header>
 
-<% for(var i = 0; i < campgrounds.length; i++){ %>
-    <div>
-        <h4><%= campgrounds[i].name %></h4>
-        <img src="<%= campgrounds[i].image %> " alt="">
+    <div class="row text-center" style="display: flex; flex-wrap: wrap;">
+        <% for(var i = 0; i < campgrounds.length; i++){ %>
+            <div class="col-md-4 col-sm-6">
+                <div class="thumbnail">
+                    <img src="<%= campgrounds[i].image %> " alt="">
+                    <div class="caption">
+                        <h4><%= campgrounds[i].name %></h4>
+                    </div>
+                </div>
+            </div>
+        <% } %>
+    
     </div>
-<% } %>
 
 <%- include("partials/footer") %> 
