--- a/v1/views/new.ejs
+++ b/v1/views/new.ejs
@@ -1,13 +1,23 @@
 <%- include("partials/header") %> 
 
-<h1>Create a new Campgrounds</h1>
-
-<form action="/campgrounds" method="post">
-    <input type="text" name="name" placeholder="Name">
-    <input type="text" name="image" placeholder="Image url">
-    <button type="submit">Submit</button>
-</form>
-
-<a href="/campgrounds">Go back</a>
+<div class="container">
+    <div class="row">
+        <h1 style="text-align: center;">Create a new Campgrounds</h1>
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/campgrounds" method="post">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="name" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="image" placeholder="Image url">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+                </div>
+            </form>
+            <a href="/campgrounds">Go back</a>  
+        </div>
+    </div>
+</div>
 
 <%- include("partials/footer") %> 
