--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,9 @@
                     <div class="caption">
                         <h4><%= campgrounds[i].name %></h4>
                     </div>
+                    <p>
+                        <a href="/campgrounds/<%= campgrounds[i]._id %>" class="btn btn-primary">More Info</a>
+                    </p>
                 </div>
             </div>
         <% } %>
