--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,6 +12,9 @@
                     <input class="form-control" type="text" name="image" placeholder="Image url">
                 </div>
                 <div class="form-group">
+                    <input class="form-control" type="text" name="description" placeholder="Description">
+                </div>
+                <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
                 </div>
             </form>
