Comments page added

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %> 
+<%- include("../partials/header") %> 
 <h1><%= campground.name %></h1>
 
 <img src="<%= campground.image %> " alt="">
@@ -13,4 +13,4 @@
         <%= campground.comments[i].text %> 
     </p>
 <% } %> 
-<%- include("partials/footer") %> 
+<%- include("../partials/footer") %> 
