--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %> 
+<%- include("../partials/header") %> 
 
 <div class="container">
 
@@ -29,4 +29,4 @@
     
     </div>
 
-<%- include("partials/footer") %> 
+<%- include("../partials/footer") %> 
