--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,6 +5,10 @@
 
 <p><%= campground.description %> </p>
 
+<p>
+    <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new"> Add New Comment</a>
+</p>
+
 <% for(var i = 0; i < campground.comments.length; i++){ %> 
     <p>
         <strong>
