--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,10 +1,10 @@
-<%- include("../partials/header") %> 
 
+<%- include ("../partials/header") %>
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center;">Add new Comment to <%= campground.name %>  </h1>
+        <h1 style="text-align: center">Add New Comment to <%= campground.name %></h1>
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/campgrounds/<%= campground._id %>/comments" method="post">
+            <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="comment[text]" placeholder="text">
                 </div>
@@ -12,12 +12,11 @@
                     <input class="form-control" type="text" name="comment[author]" placeholder="author">
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
                 </div>
             </form>
-            <a href="/campgrounds">Go back</a>  
+            <a href="/campgrounds">Go Back</a>
         </div>
     </div>
 </div>
-
-<%- include("../partials/footer") %> 
+<%- include ("../partials/footer") %>
