--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -27,7 +27,7 @@
                 <% for(var i = 0; i < campground.comments.length; i++){ %> 
                     <div class="row">
                         <div class="col-md-12">
-                            <strong><%= campground.comments[i].author %></strong>
+                            <strong><%= campground.comments[i].author.username %></strong>
                             <span class="pull-right">10 days ago</span>
                             <p>
                                 <%= campground.comments[i].text %> 
