--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,10 +20,12 @@
                     <p>
                         <em>Submitted by:- <%= campground.author.username %></em>
                     </p>
-                    <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                    <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
-                        <button class="btn btn-danger btn-xs">Delete</button>                        
-                    </form>
+                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %> 
+                        <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                        <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
+                            <button class="btn btn-danger btn-xs">Delete</button>                        
+                        </form>
+                    <% } %> 
                 </div>
             </div>
             <div class="well">
