--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,37 +13,44 @@
         <div class="col-md-9">
             <div class="thumbnail">
                 <img class="img-responsive" src="<%= campground.image %>">
-                <div class="caption">
+                <div class="caption-full">
                     <h4 class="pull-right">$9.00/night</h4>
-                    <h4><a href=""><%= campground.name %></a></h4>
-                    <p><%= campground.description %> </p>
+                    <h4><a><%=campground.name%></a></h4>
+                    <p><%= campground.description %></p>
                     <p>
-                        <em>Submitted by:- <%= campground.author.username %></em>
+                        <em>Submitted By <%= campground.author.username %></em>
                     </p>
-                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %> 
-                        <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                        <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
-                            <button class="btn btn-danger btn-xs">Delete</button>                        
+                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+                        <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                        <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
                         </form>
-                    <% } %> 
+                    <% }%>
                 </div>
             </div>
             <div class="well">
                 <div class="text-right">
-                    <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new"> Add New Comment</a>
+                    <a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
                 </div>
                 <hr>
-                <% for(var i = 0; i < campground.comments.length; i++){ %> 
+                <% campground.comments.forEach(function(comment){ %>
                     <div class="row">
                         <div class="col-md-12">
-                            <strong><%= campground.comments[i].author.username %></strong>
+                            <strong><%= comment.author.username %></strong>
                             <span class="pull-right">10 days ago</span>
                             <p>
-                                <%= campground.comments[i].text %> 
+                                <%= comment.text %> 
                             </p>
+                        <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                            <a class="btn btn-xs btn-warning" 
+                               href="/campgrounds/<%=campground._id %>/comments/<%=comment._id %>/edit">Edit</a>
+                            <form id="delete-form" action="/campgrounds/<%=campground._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
+                                <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                            </form>
+                        <% } %>
                         </div>
                     </div>
-                <% } %> 
+                <% }) %>
             </div>
         </div>
     </div>
