--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,9 +1,11 @@
 <%- include("../partials/header") %> 
 
 <div class="container">
-    <div class="row">
-        <h1 style="text-align: center;">Edit <%= campground.name %> </h1>
-        <div style="width: 30%; margin: 25px auto;">
+    <div class="row justify-content-center">
+        <div class="col-md-12 text-center">
+            <h1>Edit <%= campground.name %> </h1>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
             <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post">
                 <div class="form-group">
                     <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %> ">
