--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,9 +1,10 @@
 <%- include("../partials/header") %> 
 
-<div class="container">
-    <div class="row">
-        <h1 style="text-align: center;">Create a new Campgrounds</h1>
-        <div style="width: 30%; margin: 25px auto;">
+    <div class="row justify-content-center">
+        <div class="col-md-12 text-center">
+            <h1>Create a new Campgrounds</h1>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-4">
             <form action="/campgrounds" method="post">
                 <div class="form-group">
                     <input class="form-control" type="text" name="name" placeholder="Name">
@@ -28,6 +29,5 @@
             <a href="/campgrounds">Go back</a>  
         </div>
     </div>
-</div>
 
 <%- include("../partials/footer") %> 
