--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,38 +6,40 @@
     <!-- Make site responsive on mobile/tablet -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>YelpCamp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-    
-                <a class="navbar-brand" href="/">YelpCamp</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
-              </ul>
-              <ul class="nav navbar-nav navbar-right">
-                  <% if(!currentUser){ %>
-                      <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
-                      <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
-                  <% } else { %>
-                      <li><a href="#">Signed In As <%= currentUser.username %></a></li>
-                      <li><a href="/logout">Logout</a></li>
-                  <% } %>
-              </ul>
-            </div>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+        <a class="navbar-brand" href="/">YelpCamp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>">
+              <a href="/campgrounds" class="nav-link">Home</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+              <% if(!currentUser){ %>
+                  <li class="nav-item <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>">
+                    <a href="/login" class="nav-link">Login</a>
+                  </li>
+                  <li class="nav-item <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>">
+                    <a href="/register" class="nav-link">Sign Up</a>
+                  </li>
+              <% } else { %>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">Signed In As <%= currentUser.username %></a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/logout" class="nav-link">Logout</a>
+                  </li>
+              <% } %>
+          </ul>
         </div>
-    </nav>
+      </nav>
 
     <div class="container">
         <% if(error && error.length > 0) { %> 
