--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -2,7 +2,7 @@
 
     <header class="jumbotron">
         <div class="container">
-            <h1><span class="glyphicon glyphicon-tent"></span> Welcome To YelpCamp!</h1>
+            <h1><span class="glyphicon glyphicon-tent"><i class='fas fa-map-marked-alt' style='font-size:36px'></i></span> Welcome To YelpCamp!</h1>
             <p>View our hand-picked campgrounds from all over the world</p>
             <p>
             <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
