--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -10,7 +10,7 @@
                     <input class="form-control" type="text" name="name" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="number" name="price" placeholder="price" min="0.01" step="0.01">
+                    <input class="form-control" type="number" name="price" placeholder="Price" min="0.01" step="0.01">
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="text" name="image" placeholder="Image url">
@@ -20,10 +20,6 @@
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-                </div>
-                <div class="form-group">
-                    <label for="location">Location</label>
-                    <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
                 </div>
             </form>
             <a href="/campgrounds">Go back</a>  
