--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
       </div>
       <footer class="footer">
         <div class="container">
-          <p class="text-muted">&copy; YelpCamp 2020 | <a href="/campgrounds">Home</a> | <a href="/campgrounds/new">New Campground</a></p>
+          <p class="text-muted">&copy; Made with 💛 by Bhanuj | <a href="/campgrounds">Home</a> | <a href="/campgrounds/new">New Campground</a></p>
         </div>
       </footer>
 
