--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,14 +1,16 @@
 <%- include("partials/header") %>
 
-<div class="row">
-    <h1 style="text-align: center">Sign Up</h1>
-    <div style="width: 30%; margin: 25px auto;">
+<div class="row justify-content-center">
+    <div class="col-md-12 text-center">
+        <h1>Sign Up</h1>
+    </div>
+    <div class="col-xs-12 col-md-6 col-lg-4">
         <form action="/register" method="post">
             <div class="form-group">
-                <input class="form-control" type="text" name="username" placeholder="username">
+                <input class="form-control" type="text" name="username" placeholder="Username">
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" name="password" placeholder="password">
+                <input class="form-control" type="password" name="password" placeholder="Password">
             </div>
             <div class="form-group">
                 <input class="form-control" type="text" name="adminCode" placeholder="Admin Code">
