--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,31 +1,58 @@
-<%- include("../partials/header") %> 
+<%- include("../partials/header") %>
 
 <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-12 text-center">
-            <h1>Edit <%= campground.name %> </h1>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post">
-                <div class="form-group">
-                    <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %> ">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="number" name="campground[price]" value="<%= campground.price %> " min="0.01" step="0.01">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="campground[image]" value="<%= campground.image %> ">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="campground[description]" value="<%= campground.description %> ">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-                </div>
-            </form>
-            <a href="/campgrounds">Go back</a>  
-        </div>
+  <div class="row justify-content-center">
+    <div class="col-md-12 text-center">
+      <h1>Edit <%= campground.name %></h1>
     </div>
+    <div class="col-xs-12 col-md-6 col-lg-4">
+      <form
+        action="/campgrounds/<%= campground._id %>?_method=PUT"
+        method="post"
+      >
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="campground[name]"
+            value="<%= campground.name %> "
+          />
+        </div>
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="number"
+            name="campground[price]"
+            value="<%= campground.price %> "
+            min="0.01"
+            step="0.01"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="campground[image]"
+            value="<%= campground.image %> "
+          />
+        </div>
+        <div class="form-group">
+          <input
+            class="form-control"
+            type="text"
+            name="campground[description]"
+            value="<%= campground.description %> "
+          />
+        </div>
+        <div class="form-group">
+          <button class="btn btn-lg btn-primary btn-block" type="submit">
+            Submit
+          </button>
+        </div>
+      </form>
+      <a href="/campgrounds">Go back</a>
+    </div>
+  </div>
 </div>
 
-<%- include("../partials/footer") %> 
+<%- include("../partials/footer") %>
