--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,29 +1,53 @@
-<%- include("../partials/header") %> 
+<%- include("../partials/header") %>
 
-    <div class="row justify-content-center">
-        <div class="col-md-12 text-center">
-            <h1>Create a new Campgrounds</h1>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-            <form action="/campgrounds" method="post">
-                <div class="form-group">
-                    <input class="form-control" type="text" name="name" placeholder="Name">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="number" name="price" placeholder="Price" min="0.01" step="0.01">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="image" placeholder="Image url">
-                </div>
-                <div class="form-group">
-                    <input class="form-control" type="text" name="description" placeholder="Description">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-                </div>
-            </form>
-            <a href="/campgrounds">Go back</a>  
-        </div>
-    </div>
+<div class="row justify-content-center">
+  <div class="col-md-12 text-center">
+    <h1>Create a new Campgrounds</h1>
+  </div>
+  <div class="col-xs-12 col-md-6 col-lg-4">
+    <form action="/campgrounds" method="post">
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="name"
+          placeholder="Name"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="number"
+          name="price"
+          placeholder="Price"
+          min="0.01"
+          step="0.01"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="image"
+          placeholder="Image url"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control"
+          type="text"
+          name="description"
+          placeholder="Description"
+        />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">
+          Submit
+        </button>
+      </div>
+    </form>
+    <a href="/campgrounds">Go back</a>
+  </div>
+</div>
 
-<%- include("../partials/footer") %> 
+<%- include("../partials/footer") %>
