--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,39 @@
 <%- include("partials/header") %>
 
-    <div class="row justify-content-center">
-        <div class="col-md-12 text-center">
-            <h1>Sign In</h1>
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg-4">
-            <form class="form-signin" action="/login" method="POST">
-            <label for="inputUsername" class="sr-only">Username</label>
-            <input type="text" id="inputUsername" class="form-control" name="username" placeholder="Username" required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+<div class="row justify-content-center">
+  <div class="col-md-12 text-center">
+    <h1>Sign In</h1>
+  </div>
+  <div class="col-xs-12 col-md-6 col-lg-4">
+    <form class="form-signin" action="/login" method="POST">
+      <label for="inputUsername" class="sr-only">Username</label>
+      <input
+        type="text"
+        id="inputUsername"
+        class="form-control"
+        name="username"
+        placeholder="Username"
+        required
+        autofocus
+      />
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input
+        type="password"
+        id="inputPassword"
+        class="form-control"
+        name="password"
+        placeholder="Password"
+        required
+      />
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-            </form>
-            <div class="form-signin">
-                <a href="/campgrounds">Go Back</a>
-            </div>
-        </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">
+        Sign in
+      </button>
+    </form>
+    <div class="form-signin">
+      <a href="/campgrounds">Go Back</a>
     </div>
+  </div>
+</div>
 
 <%- include("partials/footer") %>
