--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,59 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Make site responsive on mobile/tablet -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>YelpCamp</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/stylesheets/main.css">
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="/">YelpCamp</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>">
-              <a href="/campgrounds" class="nav-link">Home</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav">
-              <% if(!currentUser){ %>
-                  <li class="nav-item <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>">
-                    <a href="/login" class="nav-link">Login</a>
-                  </li>
-                  <li class="nav-item <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>">
-                    <a href="/register" class="nav-link">Sign Up</a>
-                  </li>
-              <% } else { %>
-                  <li class="nav-item">
-                    <a href="#" class="nav-link">Signed In As <%= currentUser.username %></a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="/logout" class="nav-link">Logout</a>
-                  </li>
-              <% } %>
-          </ul>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="/">YelpCamp</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarCollapse"
+        aria-controls="navbarCollapse"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li
+            class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"
+          >
+            <a href="/campgrounds" class="nav-link">Home</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <% if(!currentUser){ %>
+          <li
+            class="nav-item <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"
+          >
+            <a href="/login" class="nav-link">Login</a>
+          </li>
+          <li
+            class="nav-item <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"
+          >
+            <a href="/register" class="nav-link">Sign Up</a>
+          </li>
+          <% } else { %>
+          <li class="nav-item">
+            <a href="#" class="nav-link"
+              >Signed In As <%= currentUser.username %></a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="/logout" class="nav-link">Logout</a>
+          </li>
+          <% } %>
+        </ul>
+      </div>
+    </nav>
 
     <div class="container">
-        <% if(error && error.length > 0) { %> 
-            <div class="alert alert-danger" role="alert">
-                <%= error %> 
-            </div>
-        <% } %> 
-        <% if(success && success.length > 0) { %>
-            <div class="alert alert-success" role="alert">
-                <%= success %> 
-            </div>
-        <% } %> 
+      <% if(error && error.length > 0) { %>
+      <div class="alert alert-danger" role="alert">
+        <%= error %>
+      </div>
+      <% } %> <% if(success && success.length > 0) { %>
+      <div class="alert alert-success" role="alert">
+        <%= success %>
+      </div>
+      <% } %>
     </div>
 
-    <div class="container">
+    <div class="container"></div>
+  </body>
+</html>
